compiler/tools/fpp-check/test/array/format_alias_not_numeric.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/array/format_alias_not_numeric.fpp:2.24
array A = [3] T format "{.3f}"
                       ^
error: invalid format string: T is not a floating-point type
